--- a/spring-qzb/spring-qzb.gradle
+++ b/spring-qzb/spring-qzb.gradle
@@ -6,4 +6,5 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     optional(project(":spring-context"))
+    compileOnly("org.projectlombok:lombok:1.18.34")
 }
