--- a/spring-qzb/spring-qzb.gradle
+++ b/spring-qzb/spring-qzb.gradle
@@ -6,5 +6,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     optional(project(":spring-context"))
-    compileOnly("org.projectlombok:lombok:1.18.34")
+    optional(project(":spring-core"))
+    api("jakarta.annotation:jakarta.annotation-api")
+    api("org.projectlombok:lombok:1.18.34")
 }
