--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,8 @@ kotlinVersion=1.9.22
 
 kotlin.jvm.target.validation.mode=ignore
 kotlin.stdlib.default.dependency=false
+
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=53926
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=53926
