--- a/spring-qzb/spring-qzb.gradle
+++ b/spring-qzb/spring-qzb.gradle
@@ -9,4 +9,6 @@ dependencies {
     optional(project(":spring-core"))
     api("jakarta.annotation:jakarta.annotation-api")
     api("org.projectlombok:lombok:1.18.34")
+    api("org.aspectj:aspectjrt:1.9.22.1")
+    api("org.aspectj:aspectjweaver:1.9.22.1")
 }
